[tool.poetry]
name = "pony-test"
version = "0.1.0"
description = ""
authors = ["AxelWhite87 <alexandrecwhitehouse@gmail.com>"]
readme = "README.md"
packages = [{include = "pony_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pony = "^0.7.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
